--- a/style.css
+++ b/style.css
@@ -174,6 +174,9 @@ underline {
 
 /* MEDIA QUERIES */
 @media (max-width: 1000px) {
+    body {
+        padding: .5em;
+    }
     .row2 {
             display: grid;
             grid-template-columns: 1fr;
